Revise generated data warning in index.html
Updated warning message about generated data accuracy.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
 
         <div style="margin-top:10px" class="section">
-          <div class="small">Данные случайно сгенерированы — редактируй DATA в скрипте</div>
+          <div class="small">Данные случайно сгенерированы и не всегда могут давать правильные направления</div>
         </div>
       `;
       resultBox.innerHTML = html;
