Add new flight route from Hamburg to Munich

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
       {fromCity:"Brussels", fromCountry:"Belgium", fromICAO:"EBBR", toCity:"London", toCountry:"United Kingdom", toICAO:"EGLL"},
       // Eurowings examples (from different hubs)
       {fromCity:"Hamburg", fromCountry:"Germany", fromICAO:"EDDH", toCity:"Barcelona", toCountry:"Spain", toICAO:"LEBL"},
+      {fromCity:"Hamburg", fromCountry:"Germany", fromICAO:"EDDH", toCity:"Munich", toCountry:"Germany", toICAO:"EDDM"},
       // ... добавляй свои строки; дублируй до 800-900 при необходимости
     ];
 
