Add flight routes from Frankfurt to various cities

--- a/index.html
+++ b/index.html
@@ -255,7 +255,21 @@
       {fromCity:"Vienna", fromCountry:"Austria", fromICAO:"LOWW", toCity:"Berlin", toCountry:"Germany", toICAO:"EDDB", durationMinutes:75},
       {fromCity:"Zurich", fromCountry:"Switzerland", fromICAO:"LSZH", toCity:"Frankfurt am Main", toCountry:"Germany", toICAO:"EDDF"},
       {fromCity:"Hamburg", fromCountry:"Germany", fromICAO:"EDDH", toCity:"Barcelona", toCountry:"Spain", toICAO:"LEBL"}
-    ];
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Amsterdam", toCountry:"Netherlands", toICAO:"EHAM", durationMinutes:70, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Athens", toCountry:"Greece", toICAO:"LGAV", durationMinutes:160, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Barcelona", toCountry:"Spain", toICAO:"LEBL", durationMinutes:150, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Belgrade", toCountry:"Serbia", toICAO:"LYBE", durationMinutes:120, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Berlin", toCountry:"Germany", toICAO:"EDDB", durationMinutes:65, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Brussels", toCountry:"Belgium", toICAO:"EBBR", durationMinutes:75, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Bucharest", toCountry:"Romania", toICAO:"LROP", durationMinutes:150, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Budapest", toCountry:"Hungary", toICAO:"LHBP", durationMinutes:115, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Copenhagen", toCountry:"Denmark", toICAO:"EKCH", durationMinutes:95, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Dublin", toCountry:"Ireland", toICAO:"EIDW", durationMinutes:145, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Edinburgh", toCountry:"United Kingdom", toICAO:"EGPH", durationMinutes:145, notes:"estimated(distance)", source:"calculated"},
+      {fromCity:"Frankfurt am Main", fromCountry:"Germany", fromICAO:"EDDF", toCity:"Florence", toCountry:"Italy", toICAO:"LIRQ", durationMinutes:110, notes:"estimated(distance)", source:"calculated"},
+  
+];
+  
 
     // non-overlapping intervals (minutes)
     const DURATIONS = [
